Unificacion gestion memoria

--- a/src/gestiondememoria/GestionMemoria.form
+++ b/src/gestiondememoria/GestionMemoria.form
@@ -38,6 +38,9 @@
               <Properties>
                 <Property name="label" type="java.lang.String" value="Static Partition Multi Value"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemSPMVActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuClearAll">
               <Properties>
@@ -92,6 +95,9 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[1110, 260]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
